--- a/src/components/Productions.astro
+++ b/src/components/Productions.astro
@@ -1,7 +1,7 @@
 ---
-import Production from '@components/Production.astro'
-import ProductionsList from '@assets/json/productions.json'
 import Translations from '@assets/json/translations.json'
+import ProductionsList from '@assets/json/productions.json'
+import Production from '@components/list/Production.astro'
 
 const locale = Astro.currentLocale ?? 'fr'
 const translations = Translations[locale as keyof typeof Translations].productions
