refactor: Update youtube link

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -22,7 +22,7 @@ const translations = Translations[locale as keyof typeof Translations].contact
         <div>
             <h3>{translations.socialNetworks}</h3>
             <section>
-                <a href="https://youtube.com/channel/UCbTaxj24z8viOFR6NXMKurQ" title="YouTube">
+                <a href="https://youtube.com/@studiorvandco" title="YouTube">
                     <Icon name={"fa6-brands:youtube"} />
                 </a>
                 <a href="https://twitter.com/studiorvandco" title="Twitter">
