--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -44,7 +44,7 @@ const translations = Translations[locale as keyof typeof Translations].header
 
         <!-- Links -->
         <section class="mobile">
-            <a href="https://youtube.com/channel/UCbTaxj24z8viOFR6NXMKurQ" title="YouTube">
+            <a href="https://youtube.com/@studiorvandco" title="YouTube">
                 <Icon name={"fa6-brands:youtube"} id="mobile" />
             </a>
             <a href="https://x.com/studiorvandco" title="Twitter">
