--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '@layouts/Layout.astro'
 import Teaser from '@components/Teaser.astro'
 import Productions from '@components/Productions.astro'
+import Projects from '@components/Projects.astro'
 import Association from '@components/Association.astro'
 import Contact from '@components/Contact.astro'
 ---
@@ -9,6 +10,7 @@ import Contact from '@components/Contact.astro'
 <Layout>
 	<Teaser />
 	<Productions />
+	<Projects />
 	<Association />
 	<Contact />
 </Layout>
