--- a/src/components/list/Project.astro
+++ b/src/components/list/Project.astro
@@ -1,7 +1,6 @@
 ---
 import Translations from '@assets/json/translations.json'
 import type { Project } from '@types'
-import { Image } from 'astro:assets'
 
 const locale = Astro.currentLocale ?? 'fr'
 const translations = Translations[locale as keyof typeof Translations].projects
@@ -11,7 +10,7 @@ const background = Object.values(projectBackgrounds)
 	.find((image: any) => image.src.includes(project.picture)) as ImageMetadata
 ---
 
-<ul class="splide__list">
+<ul class="splide__slide">
 	<div>
 		<h3>{project.name[locale as keyof typeof project.name]}</h3>
 		<p>{project.description[locale as keyof typeof project.description]}</p>
@@ -19,10 +18,6 @@ const background = Object.values(projectBackgrounds)
 	</div>
 	<img src={background.src} alt={project.name[locale as keyof typeof project.name]} width={background.width} height={background.height} loading="lazy" decoding="async" />
 </ul>
-
-<script>
-	import '@splidejs/splide/css'
-</script>
 
 <style lang="scss">
 	.splide__slide {
