--- a/src/components/list/Production.astro
+++ b/src/components/list/Production.astro
@@ -33,8 +33,8 @@ const thumbnail = Object.values(productionThumbnails)
         display: flex;
         flex-flow: row nowrap;
         align-items: center;
-        gap: calc(var(--spacing) / 1.25);
-        margin-bottom: var(--spacing);
+        gap: 4rem;
+        margin-bottom: 4rem;
 
         &:first-of-type {
             h3 {
