fix: Load fonts

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -81,9 +81,7 @@ const title = "Studio Rv & Co"
 				preload: true,
 				display: "swap",
 				selector: "body",
-				fallback: "sans-serif",
-				fetch: true,
-				cacheDir: '.astro/font-cache'
+				fallback: "sans-serif"
 			}
 			]}
 		/>
